// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityStartDiscussionComponent should show community start discussion 1`] = `
<pf-community-start-discussion
  addingCommunityDiscussionPollSuccess$={[Function Store]}
  appNotificationStore={[Function Store]}
  communityAttachments={[Function Array]}
  currentAttachmentModalState$={[Function Store]}
  discardingPostProceed$={[Function Store]}
  getNotification$={[Function Store]}
  newPostHasData="false"
  postType="0"
  route={[Function Object]}
  store={[Function Store]}
  submitAttempted="false"
  submittingCommunityJobSuccess$={[Function Store]}
  submittingCommunityPost$={[Function Store]}
  submittingCommunityPostSuccess$={[Function Store]}
>
  <div
    class="row mb-2"
  >
    <div
      class="col-4"
    >
      <div
        class="list-group"
      >
        <pf-community-tab
          data-qa-id="cnt-postTypeDiscussion"
        />
        <pf-community-tab
          data-qa-id="cnt-postTypeQuestion"
        />
        <pf-community-tab
          data-qa-id="cnt-postTypeJob"
        />
      </div>
    </div>
    <div
      class="col-8 pl-4 w-100"
    >
      
      
      
      <div
        class="footer-container"
      >
        <div
          class="float-left"
        >
          
          
        </div>
        <button
          class="btn btn-secondary float-right ml-2"
          data-qa-id="btn-reply-cancel"
        >
          Discard 
        </button>
        <button
          class="btn btn-primary float-right"
          data-qa-id="btn-startDiscussionPost"
          id="start-discussion-post-button"
        >
          Post 
          
        </button>
      </div>
    </div>
  </div>
</pf-community-start-discussion>
`;

exports[`CommunityStartDiscussionComponent should show community start poll 1`] = `
<pf-community-start-discussion
  addingCommunityDiscussionPollSuccess$={[Function Store]}
  appNotificationStore={[Function Store]}
  communityAttachments={[Function Array]}
  currentAttachmentModalState$={[Function Store]}
  discardingPostProceed$={[Function Store]}
  getNotification$={[Function Store]}
  newPostHasData="false"
  postType={[Function Number]}
  route={[Function Object]}
  store={[Function Store]}
  submitAttempted="false"
  submittingCommunityJobSuccess$={[Function Store]}
  submittingCommunityPost$={[Function Store]}
  submittingCommunityPostSuccess$={[Function Store]}
>
  <div
    class="row mb-2"
  >
    <div
      class="col-4"
    >
      <div
        class="list-group"
      >
        <pf-community-tab
          data-qa-id="cnt-postTypeDiscussion"
        />
        <pf-community-tab
          data-qa-id="cnt-postTypeQuestion"
        />
        <pf-community-tab
          data-qa-id="cnt-postTypeJob"
        />
      </div>
    </div>
    <div
      class="col-8 pl-4 w-100"
    >
      
      
      
      <div
        class="footer-container"
      >
        <div
          class="float-left"
        >
          
          
        </div>
        <button
          class="btn btn-secondary float-right ml-2"
          data-qa-id="btn-reply-cancel"
        >
          Discard 
        </button>
        <button
          class="btn btn-primary float-right"
          data-qa-id="btn-startDiscussionPost"
          id="start-discussion-post-button"
        >
          Post 
          
        </button>
      </div>
    </div>
  </div>
</pf-community-start-discussion>
`;
